Melhorias no código.